# Terminus-CLI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
src/terminus/: __init__.py  cli.py  local_environment.py  terminus.py  terminus_2.py  terminus_json_plain_parser.py  terminus_xml_plain_parser.py  tmux_session.py
