[project]
name = "terminus"
version = "0.1.0"
description = "Terminus agent for terminal-based task execution"
readme = "README.md"
authors = [{ name = "Alex Shaw", email = "alexgshaw64@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "litellm>=1.79.0",
    "tenacity>=9.1.2",
    "jinja2>=3.1.6",
    "typer>=0.16.0",
    "harbor",
]

[project.scripts]
terminus = "terminus.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
terminus = ["templates/*", "*.sh"]
